2002-05-30  Laurent Oudot  <oudot.laurent@wanadoo.fr>

        * plugins/simple/ruleset/netfilter.rules:
        upgrade of the rules owing to the new simple.c possibilities

2002-05-30  Laurent Oudot  <oudot.laurent@wanadoo.fr>

        * plugins/simple/ruleset/zyxel.rules:
        upgrade of the rules owing to the new simple.c possibilities

2002-05-27  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/file-server.c (try_reopening_inactive_fd): 
	remove unused variable.

2002-05-27  Yoann Vandoorselaere  <yoann@mandrakesoft.com>
	
	Patch from Arnaud Guignard <arnaud.guignard@free.fr> :
	
	* plugins/simple/simple.c: added patch to handle
	IDMEF source node category, source node location,
	source node name, source spoofed, source interface,
	source service port, source service protocol,
	source service name, source service portlist,
	target node address, target node category, target
	node location, target node name, target decoy,
	target interface, target service port, target
	service protocol, target service name, target
	service portlist.

	(record_source_fields): fix the impossibility to have
	several source/target node addresses.

	* plugins/simple/ruleset/simple.rules: added definitions
	for each new IDMEF tag.
	
2002-05-21  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/pconfig.c (set_file): 
	file_server_monitor_file() now open the file by itself.

	* src/file-server.c: 
	use list instead of array to store monitor. Now we have
	an active FD list and an inactive FD list.
	
	(file_server_monitor_file): don't take the file handle as
	argument anymore, we open the file by ourselve. Mark the file
	as inactive if we can't open it.

	(file_server_wake_up): 
	if st_nlink is 0, then the file doesn't exist on the filesystem
	anymore, mark as inactive, and try reopening later.
	
	(try_reopening_inactive_fd): new function, try opening
	monitor marked as inactive.

2002-05-16  Baptiste Malguy <baptiste@malguy.net>

        * src/*-plugins.c (*_plugins_init):